# Slrd-Management

./: .env  .gitignore  TODO.md  app.py  main.py  models.py  pyproject.toml  requirements.txt
static/css/: style.css
static/js/: main.js
templates/: admin-dashboard.html  employee-dashboard.html  login.html
