[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Admin Login Panel - Employee and Admin Management System"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=5.0.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.11",
    "werkzeug>=3.1.3",
    "gunicorn>=23.0.0",
]
